# FallingBlockGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
Core/: CMakeLists.txt
Core/src/: GameWindow.cpp  GameWindow.h
Game/: CMakeLists.txt
Game/src/: Game.cpp  Game.h  main.cpp
src/: Block.cpp  Block.h  Blocks.h  Game.cpp  Game.h  IBlock.h  Segment.cpp  Segment.h  TBlock.h  ZBlock.h  main.cpp
src/Blocks/: Block.cpp  Block.h  Blocks.h  IBlock.h  JBlock.h  LBlock.h  OBlock.h  SBlock.h  TBlock.h  ZBlock.h
